# django-bootstrap5

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/templates/blog/: home.html  post_detail.html
settings/: settings.py  urls.py
sql/: BLOG_POST.sql
