[tool.poetry]
name = "django-bootstrap5"
version = "0.1.0"
description = ""
authors = ["Ricardo Dias <contatoricardodias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
python-decouple = "^3.8"
oracledb = "^2.1.1"
django-ckeditor = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
